# project_mgm

./: .gitignore  FEJLESZTOI_UTMUTATO.md  PROJEKT_STATUS.md  README.md  TODO.md  TRACKING_STABILITAS.md  test_tracking.py
config/: lidar_filter_rviz.rviz
docs/: FUTTATAS_UTMUTATO.md  MUNKA_OSSZEFOGLALO_2025-10-28.md  MUNKA_OSSZEFOGLALO_2025-10-30.md  MUNKA_OSSZEFOGLALO_2025-10-31_VIZUALIZACIO.md  MUNKA_OSSZEFOGLALO_2025-11-01_OVERLEAF.md  Mérföldkövek.md  TODO_MitrengaMark.md
src/mgm_gyak/: .gitmodules  README.md
src/mgm_gyak/gyak2/: package.xml  setup.cfg  setup.py
src/mgm_gyak/gyak3/: CMakeLists.txt  package.xml
src/mgm_gyak/gyak3/bag/: metadata.yaml
src/mgm_gyak/gyak3/gyak3/: path.py
src/mgm_gyak/gyak3/launch/: gyak3.launch.xml
src/mgm_gyak/gyak3/rviz/: gyak3.rviz
src/mgm_gyak/gyak4/: CMakeLists.txt  package.xml
src/mgm_gyak/gyak5/: package.xml  setup.cfg  setup.py
src/mgm_gyak/gyak6/: package.xml  setup.cfg  setup.py
src/mgm_gyak/hamster_simulation/: .gitmodules  README.md
src/mgm_gyak/hamster_simulation/hamster_teleop/: CMakeLists.txt  package.xml
src/mgm_gyak/hamster_simulation/hamster_teleop/hamster_teleop/: keyboard.py
src/mgm_gyak/hamster_simulation/hamster_teleop/launch/: joystick.launch  keyboard.launch
src/mgm_gyak/hamster_simulation/hamster_teleop/src/: joystick_teleop_node.cpp
src/mgm_gyak/hamster_simulation/hamster_vehicle/: CMakeLists.txt  package.xml
src/mgm_gyak/hamster_simulation/hamster_vehicle/launch/: hamster_multi_sim.launch  hamster_single_sim.launch
src/mgm_gyak/hamster_simulation/hamster_vehicle/rviz/: hamsters.rviz
src/mgm_gyak/lidar_filter/: README.md  package.xml  setup.cfg  setup.py
tests/: test_cases.md
tests/test_results/: TESZT_OSSZEFOGLALO.md  visualize_metrics.py
tests/test_results/T1_static/: metrics_t1.csv  notes_t1.md
tests/test_results/T2_moving/: ANALYSIS_T2_v2.md  README_T2.md  README_T2_OPTIMIZED.md  notes_t2.md  notes_t2_v2.md
tests/test_results/T3_stress/: ANALYSIS_T3_v1.md  ANALYSIS_T3_v2.md  GAZEBO_HARMONIC_FIX.md  QUICKSTART_T3.md  README_ANALYSIS.md  README_T3.md  README_T3_v2.md  ROSBAG_ANALYSIS_T3_v2.md  analyze_objects.py  analyze_rosbag.py  continuous_spawn.sh  manual_analyze.sh  notes_t3.md  objects_dump.txt  run_analyze.sh  (+3 more)
(+44 files in other folders)
