<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hamster_teleop</name>
  <version>0.0.0</version>
  <description>The hamster_teleop package</description>
  <maintainer email="ofir@todo.todo">ofir</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>joy</depend>
  <depend>roscpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>